--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,290 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: url("../src/imgs/bg.jpg");
+  background-size: contain;
+  opacity: 1;
+  height: 100%;
+  width: 100%;
+  color: #ccc;
+  overflow: hidden;
+  /*  poner boton de home en las otras secciones */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body::after {
+  height: 100%;
+  width: 100%;
+  content: "";
+  background: #12191f;
+  opacity: 0.955;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  z-index: -1;
 }
 
-.App-header {
-  background-color: #282c34;
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container-btns,
+.container-fisicas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+}
+
+.btn-fiscas,
+.btn-criptos {
+  border: 1px solid #6f0;
+  border-radius: 5px;
+  padding: 1rem;
+  margin: 0 1rem 0 1rem;
+  background: none;
+  color: #ccc;
+  font-size: 1rem;
+  outline: none;
+  cursor: pointer;
+  width: 300px;
+  box-shadow: inset 0 0 0 0 skyblue;
+  transition: all 0.4s ease;
+}
+
+.btn-fiscas:hover,
+.btn-criptos:hover,
+.btn-convertir:hover {
+  box-shadow: inset 300px 0 0 0 skyblue;
+  border: #12191f;
+  color: #12191f;
+}
+
+/* .menu-desplegable {
+  display: flex;
+  align-items: center;
+  margin-top: 5rem;
+}
+
+.btn-hamburguesa {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  height: 2rem;
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-hamburguesa:focus {
+  outline: none;
+}
+
+.linea-hamburguesa {
+  background: #ccc;
+  width: 3rem;
+  height: 2px;
+}
+
+.lista-desplegables {
+  list-style: none;
+  display: flex;
+}
+
+.item-desplegable {
+  padding: 0 0.5rem;
+} */
+
+.btn-home-fisicas {
+  background: none;
+  color: #ccc;
+  border: none;
+  position: absolute;
+  top: 45rem;
+  left: 2rem;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn-abajo {
+  background: none;
+  color: #ccc;
+  border: none;
+  position: absolute;
+  top: 80rem;
+  left: 2rem;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn-home-criptos {
+  background: none;
+  color: #ccc;
+  border: none;
+  position: absolute;
+  top: 88rem;
+  left: 2rem;
+  cursor: pointer;
+  outline: none;
+}
+
+select {
+  background: #12191f;
+  color: #ccc;
+  border: none;
+  outline: none;
+}
+
+option {
+  color: #ccc;
+  background: #12191f;
+  outline: none;
+}
+
+.btn-convertir {
+  border: 1px solid #6f0;
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin: 0 1rem 0 1rem;
+  background: none;
+  color: #ccc;
+  font-size: 1rem;
+  outline: none;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 skyblue;
+  transition: all 0.4s ease;
+}
+
+.form-cripto {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.input-cripto {
+  background: none;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #ccc;
+  padding: 1rem;
+  color: #ccc;
+  font-size: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-cripto::placeholder {
+  color: #ccc;
+}
+
+.tabla-criptos {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.encabezados:first-child {
+  font-size: 1.2rem;
+}
+
+.encabezados th:first-child {
+  text-align: justify;
+}
+
+.nombre-cripto {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  height: 5rem;
+}
+
+.nombre-cripto img {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 0.5rem;
+}
+
+.cripto {
+  display: flex;
+  align-items: center;
+  padding-right: 1.5rem;
+}
+
+.cripto h1 {
+  text-align: justify;
+  font-size: 1rem;
+  width: 5vw;
+  margin-right: 1rem;
+}
+
+.simbolo-cripto {
+  text-transform: uppercase;
+}
+
+td,
+th {
+  text-align: center;
+  min-width: 10vw;
+  padding: 2rem;
+}
+
+.positivo {
+  color: #b0fc38;
+}
+
+.negativo {
+  color: #e3432b;
+}
+
+@media (max-width: 500px) {
+  .btn-fiscas,
+  .btn-criptos {
+    width: 100px;
+    font-size: 0.5rem;
+    padding: 0.5rem;
+    margin: 0 0.5 0 0.5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .tabla-criptos tbody tr {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .encabezados {
+    display: none;
+  }
+
+  .nombre-cripto {
+    display: flex;
+    justify-content: center;
+  }
+
+  .cripto h1 {
+    width: auto;
+  }
+
+  .cripto p {
+    margin-left: 0.5rem;
+  }
+
+  td {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem;
+  }
+
+  td::before {
+    content: attr(nombre);
+    font-weight: bold;
   }
 }
