--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ body::after {
   border: 1px solid #6f0;
   border-radius: 5px;
   padding: 1rem;
-  margin: 0 1rem 0 1rem;
+  margin: 0 1rem;
   background: none;
   color: #ccc;
   font-size: 1rem;
@@ -201,7 +201,7 @@ option {
   border: none;
   position: absolute;
   bottom: -112.5%;
-  left: 10%;
+  left: 11%;
   cursor: pointer;
   outline: none;
   animation: mostrar 0.5s ease;
@@ -213,7 +213,7 @@ option {
   border: none;
   position: absolute;
   bottom: -112.5%;
-  left: 17%;
+  left: 20%;
   cursor: pointer;
   outline: none;
   animation: mostrar 0.5s ease;
@@ -288,34 +288,28 @@ th {
 }
 
 @media (max-width: 500px) {
+  .container-btns {
+    flex-direction: column;
+  }
+
   .btn-fiscas,
   .btn-criptos {
-    width: 100px;
-    font-size: 0.5rem;
-    padding: 0.5rem;
-    margin: 0 0.5 0 0.5rem;
+    margin: 1rem 0;
   }
 
   .btn-home-fisicas-abierto {
-    background: none;
-    color: #ccc;
-    border: none;
-    position: absolute;
     bottom: -11%;
     left: 20%;
-    cursor: pointer;
-    outline: none;
   }
 
   .btn-abajo-abierto {
-    background: none;
-    color: #ccc;
-    border: none;
-    position: absolute;
     bottom: -11%;
     left: 35%;
-    cursor: pointer;
-    outline: none;
+  }
+
+  .info-abierto {
+    bottom: -11%;
+    left: 50%;
   }
 
   .tabla-criptos tbody tr {
